# spdlog-sinks-graylog

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
include/spdlog/sinks/: graylog_sink.hpp  graylog_sink_options.hpp
